--- a/src/AppBundle/static/admin.html.twig
+++ b/src/AppBundle/static/admin.html.twig
@@ -1,1 +1,8 @@
-admin page
+{% extends "AppBundle::layout.html.twig" %}
+{% block fos_user_content %}
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>This is the Admin environment</h1>
+        </div>
+    </div>
+{% endblock %}
