--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -52,6 +52,11 @@
                 </div>
 
             </form>
+            <div class="col-lg-12">
+                <p>
+                    If you don't have an account please go <a href="{{ path("app_root") }}">here</a>
+                </p>
+            </div>
 
         </div>
     </div>
